Closed Bug 1319831 Opened 8 years ago Closed 8 years ago

Fix some msvc build warnings.

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: Ms2ger, Assigned: Ms2ger)

References

Details

Attachments

(2 files)

      No description provided.
Attachment #8813732 - Flags: review?(jwalden+bmo)
Attachment #8813733 - Flags: review?(jwalden+bmo)
Comment on attachment 8813732 [details] [diff] [review]
Fix an unbalanced pragma in Vector.h

Review of attachment 8813732 [details] [diff] [review]:
-----------------------------------------------------------------

::: js/public/Vector.h
@@ +43,5 @@
>  } // namespace js
>  
> +#if defined(_MSC_VER)
> +#pragma warning(pop)
> +#endif

Could you just remove the pragma-push instead?  https://searchfox.org/mozilla-central/source/js/src/old-configure.in#172 suggests this shouldn't be necessary.
Attachment #8813732 - Flags: review?(jwalden+bmo) → review+
Attachment #8813733 - Flags: review?(jwalden+bmo) → review+
Blocks: 1320059
Pushed by Ms2ger@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/296b9cc46b97
Remove an unbalanced pragma from Vector.h; r=Waldo
https://hg.mozilla.org/integration/mozilla-inbound/rev/77ce40d94cfa
Clarify some code with explicit casts; r=Waldo
https://hg.mozilla.org/mozilla-central/rev/296b9cc46b97
https://hg.mozilla.org/mozilla-central/rev/77ce40d94cfa
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: