Bug 1319831 - Clarify some code with explicit casts; r=Waldo